[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/player/player_sprite.png" type="Texture" id=1]
[ext_resource path="res://scenes/level/manual_tile/EnvironTileSet.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/others/GameLabelsFont.tres" type="DynamicFontData" id=3]
[ext_resource path="res://assets/other/logo.png" type="Texture" id=4]
[ext_resource path="res://assets/player/axe.png" type="Texture" id=5]
[ext_resource path="res://scenes/level/LEVELS/Sprite3.gd" type="Script" id=6]
[ext_resource path="res://scenes/level/LEVELS/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://scenes/others/GameLabels.tscn" type="PackedScene" id=8]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="DynamicFont" id=3]
size = 82
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 537.398, 300.278 )
scale = Vector2( 10, 10 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 537.398, 300.278 )
scale = Vector2( 100, 100 )
z_index = -1
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 192.515, 408.758 )
scale = Vector2( 20, 20 )
z_index = -1
texture = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3" type="Sprite" parent="CenterContainer"]
material = SubResource( 2 )
position = Vector2( 512, 152 )
rotation = 0.698132
scale = Vector2( 10, 10 )
z_index = -1
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 251.0
margin_top = 154.0
margin_right = 773.0
margin_bottom = 446.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 522.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 522.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 1 )
text = "The Axe-ccident"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 219.0
margin_right = 522.0
margin_bottom = 292.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
text = "START GAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameLabels" parent="." instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_top = 1.0
margin_left = -1024.0
margin_top = -600.0
text = "Development by Renzo"
align = 2
valign = 2
[connection signal="gui_input" from="CenterContainer/VBoxContainer/StartGame" to="." method="_on_StartGame_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/StartGame" to="." method="_on_StartGame_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/StartGame" to="." method="_on_StartGame_mouse_exited"]
